# LeticiaMusic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  main.cpp  res.qrc
android/: AndroidManifest.xml
android/res/drawable/: splash.xml
android/res/values/: strings.xml  themes.xml
android/src/org/qtproject/example/: MediaStoreHelper.java
docs/: ARCHITECTURE.md  CHANGELOG.md  PERFORMANCE.md  SYNC_DESIGN.md
src/core/application/: appconfig.cpp  appconfig.h  appcontext.cpp  appcontext.h  play_source_type.h  playercontroller.cpp  playercontroller.h  scanworker.cpp  scanworker.h
src/core/database/: database_exception.h
src/core/database/sqlite/: sqlitedatabaseservice.cpp  sqlitedatabaseservice.h
src/core/design/: color_tokens.cpp  color_tokens.h  design_system.cpp  design_system.h  design_system_config.cpp  design_system_config.h  font_tokens.cpp  font_tokens.h  qml_tools.cpp  qml_tools.h  responsive_tokens.cpp  responsive_tokens.h  spacing_tokens.cpp  spacing_tokens.h
src/core/filesystem/metadata/: metadataoverridemanager.cpp  metadataoverridemanager.h  musiccovermanager.cpp  musiccovermanager.h
src/core/filesystem/musicfile/: musicfilemanager.cpp  musicfilemanager.h  musicscanner.cpp  musicscanner.h
src/core/interfaces/: IMusicEntityViewModel.h  idatabaseservice.h
src/core/models/: playlist.h
src/core/platform/: android_media_scanner.cpp  android_media_scanner.h
src/core/playlist/: favoritemanager.cpp  favoritemanager.h  playlistmanager.cpp  playlistmanager.h
src/core/services/: dedup_service.cpp  dedup_service.h  init_orchestrator.cpp  init_orchestrator.h  init_step.h  init_steps.cpp  init_steps.h  playback_service.cpp  playback_service.h  playback_state.h  scan_service.cpp  scan_service.h  service_locator.cpp  service_locator.h
src/core/sync/: deleted_entries_syncable.cpp  deleted_entries_syncable.h  ftp_session.cpp  ftp_session.h  ftp_thread_pool.cpp  ftp_thread_pool.h  isyncable.h  sync_config.h  sync_coordinator.cpp  sync_coordinator.h  sync_manager.cpp  sync_manager.h  sync_manifest.h  sync_task.h  sync_worker.cpp  sync_worker.h
src/core/threading/: threadpoolmanager.cpp  threadpoolmanager.h
src/core/utils/: config_section.h  dedup_engine.cpp  dedup_engine.h  logger.cpp  logger.h  music_entity_type.h  musicinfo.cpp  musicinfo.h  pinyin.cpp  pinyin.h  pinyin_data.inc  platform_path_helper.cpp  platform_path_helper.h  query_options.h  singleton_holder.h  taglib_utils.h
src/core/viewmodels/: viewmodelmanager.cpp  viewmodelmanager.h
src/core/viewmodels/music/: local_music_view_model.cpp  local_music_view_model.h
src/core/viewmodels/playlist/: abstract_playlist_list_model.cpp  abstract_playlist_list_model.h  collectionplaylistviewmodel.cpp  collectionplaylistviewmodel.h  playlistdetailviewmodel.cpp  playlistdetailviewmodel.h  playlistviewmodel.cpp  playlistviewmodel.h
src/qml/android/: Main.qml
src/qml/android/component/: AlphabetIndex.qml  BottomNavBar.qml  FloatingProgressBall.qml  MetadataEditSheet.qml  MiniPlayerBar.qml  MusicActionSheet.qml  MusicListItem.qml  NowPlayingPage.qml  PlayQueueSheet.qml  ScanProgressCard.qml  SyncConfigSheet.qml  SyncFloatingBall.qml
src/qml/android/pages/: DeletedMusicPage.qml  DuplicateSongsPage.qml  FavoritesPage.qml  LocalMusicPage.qml  PlaylistsPage.qml  ProfilePage.qml  ScanSettingsPage.qml
src/qml/common/control/: NowPlayingInfo.qml  PlayModeSelector.qml  PlaybackControlBar.qml  ProgressSlider.qml
src/qml/common/icon/: HeartFillIcon.qml  HeartLineIcon.qml  ListLoopIcon.qml  MusicNoteIcon.qml  NextIcon.qml  PauseIcon.qml  PlayIcon.qml  PrevIcon.qml  QueueIcon.qml  ShuffleIcon.qml  SingleLoopIcon.qml
src/qml/win/: Main.qml
src/qml/win/Icons/: CloseIcon.qml  MaximizeIcon.qml  MinimizeIcon.qml  RestoreIcon.qml  SettingsIcon.qml
src/qml/win/component/: AboutSettingsView.qml  AddToPlaylistMenu.qml  AlphabetIndex.qml  CoverCropDialog.qml  FavoriteButton.qml  LocalMusicListView.qml  MetadataEditorDialog.qml  MusicSettingsView.qml  PlayQueueView.qml  PlaybackControls.qml  PlaybackSettingsView.qml  PlaylistContextMenu.qml  PlaylistDetailView.qml  PlaylistListView.qml  ScanProgressBar.qml  SearchBar.qml  SettingsPage.qml  SideNavigation.qml  SongContextMenu.qml  SyncProgressCard.qml  SyncSettingsView.qml  ToastNotification.qml  WindowControls.qml
tests/: CMakeLists.txt  build_tests.py  run_tests.py
tests/core/: CMakeLists.txt  test-logger.cpp  test-musicitem.cpp  test-sync-compare.cpp  test-viewmodelmanager.cpp  test-viewmodelmanager.h
